# libcerf

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  cerf.pc.in  configure  configure.ac  libcerf.pc.in  logo.ps
autom4te.cache/: output.0  requests  traces.0
cmake/: cerfConfig.cmake.in
dev/1d/: bisect_fct.py  demo_imwofx_chebcoeffs.py  pro_erfcx_chebcoeffs.py  pro_imwofx_chebcoeffs.py  pro_imwofx_n2x_asymex.py  pro_imwofx_noncheb.py  pro_test_erfcx.py  pro_test_imwx.py
dev/shared/: functool.py  runtool.py
dev/study/: expa2n2.py
dev/tool/: exchange-code
dev/w/: arrange_polyominoes.py  bisect_wofz.py  check1_wofz.py  check_tiling.py  contour_absw.py  contour_absw_q1.py  corners_check.py  derive_w.py  enumerate_diameters.py  enumerate_polyominoes.py  find_minimum.py  map_coloring.py  pro_wofz_taylor.py  ref_wofz.py  relerr_wofz.py  reltot.py  standard_expansions.py  tau_at.py  tau_grid.py  tiling.ps
devtool/: arrange_polyominoes.py  bisect_fct.py  bisect_imwx.py  bisect_wofz.py  check1_wofz.py  check_tiling.py  compute_rho_of_N.py  contour_absw.py  contour_absw_q1.py  contour_d2.py  demo_imwofx_chebcoeffs.py  derive_w.py  enumerate_diameters.py  enumerate_polyominoes.ps  enumerate_polyominoes.py  functool.py  hp_funcs.py  polyominoes.ps  print_recursion.py  print_taylor_radius.py  pro_erfcx_chebcoeffs.py  pro_erfcx_noncheb.py  pro_imwofx_chebcoeffs.py  pro_test_erfcx.py  pro_test_imwx.py  pro_wofz_expa2n2.py  pro_wofz_noncheb.py  pro_wofz_taylor.py  ref_wofz.py  relerr.py  relerr_random.py  relerr_wofz.py  reltot.py  runtool.py  tau_at.py  tau_grid.py  test680a.py  tiling.ps  truncation_radius.py  xi+rho.py
devtools/build_scripts_Win64/: build_x64.bat
lib/: CMakeLists.txt  Makefile.am  Makefile.in  c.h  cerf.h  cpp.h  defs.h  erfcx.c  err_fcts.c  experimental.c  faddeeva.c  im_w_of_x.c  im_w_of_z.c  myvoigt.c  w_of_z.c  w_taylor_centers.c  w_taylor_coeffs.c  w_taylor_cover.c  width.c
man/: CMakeLists.txt  Makefile.am  Makefile.in  cerf.pod  dawson.pod  erfcx.pod  erfi.pod  faddeeva.pod  voigt.pod  w_of_z.pod
run/: CMakeLists.txt  bigloop.c  run_erfcx.c  run_fwhm.c  run_imwx.c  run_voigt.c  run_w_of_z.c  run_wofz.c  runvoigt.c  tabulate.c
test/: .clang-format  CMakeLists.txt  Makefile.am  Makefile.in  cerftest.c  dawsontest.c  erfcxtest.c  imwxtest.c  realtest.c  runvoigt  runvoigt.c  statusquotest.c  test1.c  test_libcerf_1  testtool.h  voigttest.c  widthtest.c  wofztest.c
var/: logo.ps
