AC_INIT([cerf], [0:0:0], [http://apps.jcns.fz-juelich.de/libcerf])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([lib/faddeeva.c]) # assure we have the right src dir
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_MACRO_DIR([m4])
LT_INIT
AC_PROG_CC
AC_PROG_LIBTOOL
AC_CONFIG_FILES([Makefile lib/Makefile man/Makefile test/Makefile])
AC_OUTPUT
